# SimpleOpenGLVoxelGameDemo

./: .gitignore  CMakeLists.txt  README.md
assets/shader/opengl/block/: block_frame.frag  block_frame.vert  cube_block.frag  cube_block.geom  cube_block.vert  cube_frame.frag  cube_frame.vert  plant_block.frag  plant_block.geom  ray.frag  ray.vert  ray_point.frag  ray_point.vert  test.geom
assets/shader/opengl/ui/: block_item.frag  block_item.vert  framebuffers_screen.frag  framebuffers_screen.vert  reverse_color.frag  reverse_color.vert  ui.frag  ui.vert
ext/glad/include/glad/: glad.h
ext/glad/src/: glad.c
ext/stb/: stb.c
src/dme/: core.h  game.cpp  game.h  main.cpp
src/dme/block/: block.cpp  block.h  block_cuboid.cpp  block_cuboid.h  block_data.h  block_data_type.h  block_shape.h  bpos.cpp  bpos.h  cube_face.cpp  cube_face.h
src/dme/block/chunk/: cbpos.h  chunk.cpp  chunk.h
src/dme/block/proto/: all.cpp  all.h  block_proto.cpp  block_proto.h  plant_block_proto.cpp  plant_block_proto.h
src/dme/core/: all.h  base.h  c_file.h  config.h  hash.h  macro.h  singleton.cpp  singleton.h  type_traits.h  utils.h
src/dme/core/utils/: arr_free_span.h  bit_arr.h  c_arr.h  dyn_arr.h  flat_key_map.h  flat_map.h  flat_set.h  growable_stack.h  hash_map.h  hash_set.h  hive.h  intrusive_list.h  multi_size_arr.h  obj_pool.h  pair.h  stack_arr.h  static_init.h  str_id.h  test_timer.h  tree_map.h  tree_set.h
src/dme/core/utils/mem/: _compressed_pair.h  arr_mem.h  flat_hash_mem.h  flat_key_hash_mem.h  hash_mem.h  iterator.h  obj_pool_mem.h  tree_pool_mem.h
src/dme/engine/: world_time.cpp  world_time.h
src/dme/engine/core/: all.h  game_platform.h  scene.cpp  scene.h
src/dme/entity/: creature.cpp  creature.h  entity.cpp  entity.h  player.cpp  player.h
src/dme/event/: event.h
src/dme/event/data/: all.h  block_destroy_data.cpp  block_destroy_data.h  block_load_data.cpp  block_load_data.h  block_place_data.cpp  block_place_data.h  block_update_data.cpp  block_update_data.h  item_use_data.cpp  item_use_data.h
src/dme/graph/: camera.cpp  camera.h  context.cpp  context.h  cube_frame.cpp  cube_frame.h  cuboid_frame.cpp  cuboid_frame.h  fix_camera.cpp  fix_camera.h  ray.cpp  ray.h  shader.cpp  shader.h  skybox.cpp  skybox.h
src/dme/graph/buffer/: frame_buffer.cpp  frame_buffer.h
src/dme/graph/mesh/: cube_mesh.cpp  cube_mesh.h  mesh_draw_mode.h  mesh_editor.cpp  mesh_editor.h  plant_mesh.cpp  plant_mesh.h  ui_mesh.cpp  ui_mesh.h
src/dme/graph/texture/: tex.cpp  tex.h  tex2d.cpp  tex2d.h  tex2d_array.cpp  tex2d_array.h  tex2d_int.cpp  tex2d_int.h  tex2d_multisample.cpp  tex2d_multisample.h  tex_atlas.cpp  tex_atlas.h  tex_cube.cpp  tex_cube.h
src/dme/graph/vertex/: vertex_array.cpp  vertex_array.h  vertex_array_manage.cpp  vertex_array_manage.h  vertex_index_array.cpp  vertex_index_array.h  vertex_index_editor.h  vertex_type.h  vertex_type_base.h
src/dme/input/: input.cpp  input.h  input_config.cpp  input_config.h  input_key.cpp  input_key.h
src/dme/item/: item_stack.cpp  item_stack.h
src/dme/item/inventory/: backpack.cpp  backpack.h  inventory.cpp  inventory.h
src/dme/item/proto/: all.cpp  all.h  block_item_proto.cpp  block_item_proto.h  item_proto.cpp  item_proto.h
src/dme/math/: all.h  fix.h  matrix.h  noise.cpp  noise.h  radian.cpp  radian.h  seed.cpp  seed.h  utils.h  vector.h
src/dme/math/geom/: base.h  box.cpp  box.h  ray.cpp  ray.h
src/dme/ui/: crosshair.cpp  crosshair.h  ui.cpp  ui.h  ui_bvh.cpp  ui_bvh.h  ui_bvh_bak.cpp  ui_bvh_bak.h  ui_flag.h  ui_mesh_key.h  ui_unit.cpp  ui_unit.h
src/dme/ui/item/: block_item_icon.cpp  block_item_icon.h  hotbar.cpp  hotbar.h  inventory_ui.cpp  inventory_ui.h  item_icon.cpp  item_icon.h
src/dme/ui/widget/: button.cpp  button.h
src/dme/util/: bvh.cpp  bvh.h  log.cpp  log.h
src/dme/world/: world.cpp  world.h  world_generator.cpp  world_generator.h
